fix video not playing on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -68,3 +68,37 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 }
+
+
+@media (min-width: 576px) {
+	.h-sm-75 {
+	  height: 75% !important;
+	}
+	.h-sm-100 {
+	  height: 100% !important;
+	}
+  }
+  @media (min-width: 768px) {
+	.h-md-75 {
+	  height: 75% !important;
+	}
+	.h-md-100 {
+	  height: 100% !important;
+	}
+  }
+  @media (min-width: 992px) {
+	.h-lg-75 {
+	  height: 75% !important;
+	}
+	.h-lg-100 {
+	  height: 100% !important;
+	}
+  }
+  @media (min-width: 1200px) {
+	.h-xl-75 {
+	  height: 75% !important;
+	}
+	.h-xl-100 {
+	  height: 100% !important;
+	}
+  }
